--- a/index.html
+++ b/index.html
@@ -1,19 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/favicon-32x32.png"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Chivo:wght@300;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<script defer src="script.js"></script>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Pod request access landing page</title>
-</head>
-<body>
-  Publish your podcasts everywhere.
+		<title>Frontend Mentor | Pod request access landing page</title>
+	</head>
+	<body>
+		<main>
+			<section class="pod-section">
+				<img src="assets/desktop/logo.svg" alt="" class="logo" />
 
-  Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
-  Apple Podcasts, Google Podcasts, Pocket Casts and more!
-
-  Request access
-</body>
+				<div class="content">
+					<h1>Publish your podcasts <span>everywhere.</span></h1>
+					<p>
+						Upload your audio to Pod with a single click. We’ll then distribute
+						your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket
+						Casts and more!
+					</p>
+					<div class="form-container">
+						<form>
+							<input
+								id="email"
+								type="email"
+								name=""
+								id=""
+								placeholder="Email address"
+							/>
+							<input id="button" type="button" value="Request Access" />
+						</form>
+						<div class="form-message">Oops! Please check your email</div>
+					</div>
+					<div class="logos">
+						<div
+							style="
+								background: url(assets/desktop/spotify.svg) center center /
+									contain no-repeat;
+							"
+						></div>
+						<div
+							style="
+								background: url(assets/desktop/apple-podcast.svg) center center /
+									contain no-repeat;
+							"
+						></div>
+						<div
+							style="
+								background: url(assets/desktop/google-podcasts.svg) center
+									center / contain no-repeat;
+							"
+						></div>
+						<div
+							style="
+								background: url(assets/desktop/pocket-casts.svg) center center /
+									contain no-repeat;
+							"
+						></div>
+					</div>
+				</div>
+			</section>
+		</main>
+	</body>
 </html>
