--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								id=""
 								placeholder="Email address"
 							/>
-							<input id="button" type="button" value="Request Access" />
+							<input id="button" type="submit" value="Request Access" />
 						</form>
 						<div class="form-message">Oops! Please check your email</div>
 					</div>
